--- a/Website/index.html
+++ b/Website/index.html
@@ -73,12 +73,13 @@
           </div>
           <div class="col-lg-4">
             <div class="features-icons-item mx-auto mb-0 mb-lg-3">
+              <a href = "#Testimonials">
               <div class="features-icons-icon d-flex">
                 <i class="icon-check m-auto text-primary"></i>
               </div>
               </a>
               <h3>Easy to Use</h3>
-              <p class="lead mb-0">Ready to use with your own content, or customize the source files!</p>
+              <p class="lead mb-0">With the Smart Garden, you will never have to worry about your plants again. See what our users have to say!</p>
             </div>
           </div>
         </div>
@@ -207,6 +208,7 @@
 
     <!-- Testimonials -->
     <section class="testimonials text-center bg-light">
+      <a name = "Testimonials"></a>
       <div class="container">
         <h2 class="mb-5">What people are saying...</h2>
         <div class="row">
