--- a/Website/index.html
+++ b/Website/index.html
@@ -38,7 +38,7 @@
       <div class="container">
         <div class="row">
           <div class="col-xl-9 mx-auto">
-            <h1 class="mb-5">Smart Garden is here to help you take care of your kitchen plants!</h1>
+            <h1 class="mb-5">Smart Planter is here to help you take care of your kitchen plants!</h1>
           </div>
         </div>
       </div>
@@ -57,7 +57,7 @@
               </div>
               </a>
               <h3>A Friendly Companion</h3>
-              <p class="lead mb-0">Along with the Smart Garden comes a chat companion, which will help you care for your plants. Click on the icon for guidance on how to use the Smart Garden.</p>
+              <p class="lead mb-0">Along with the Smart Planter comes a chat companion, which will help you care for your plants. Click on the icon for guidance on how to use the Smart Planter.</p>
             </div>
           </div>
           <div class="col-lg-4">
@@ -68,7 +68,7 @@
               </div>
               </a>
               <h3>Interested in Development?</h3>
-              <p class="lead mb-0">Should you want to further mod your Smart Garden, there is plenty of room for that. Click on the icon to gain insight on how the Garden works.</p>
+              <p class="lead mb-0">Should you want to further mod your Smart Planter, there is plenty of room for that. Click on the icon to gain insight on how the Planter works.</p>
             </div>
           </div>
           <div class="col-lg-4">
@@ -79,7 +79,7 @@
               </div>
               </a>
               <h3>Easy to Use</h3>
-              <p class="lead mb-0">With the Smart Garden, you will never have to worry about your plants again. See what our users have to say!</p>
+              <p class="lead mb-0">With the Smart Planter, you will never have to worry about your plants again. Click on the icon to see what our users have to say!</p>
             </div>
           </div>
         </div>
@@ -103,14 +103,14 @@
           </div>
           <div class="col-lg-6 order-lg-1 my-auto showcase-text">
             <h2>Ready for Your Smart Home</h2>
-            <p class="lead mb-0">With the Smart Garden, your kitchen will be one step closer to having all your appliances controlled centrally. You can place the Garden in your kitchen or your living room, where the slick design will fit right in, regardless of surroundings.</p>
+            <p class="lead mb-0">With the Smart Planter, your kitchen will be one step closer to having all your appliances controlled centrally. You can place the Planter in your kitchen or your living room, where the slick design will fit right in, regardless of surroundings.</p>
           </div>
         </div>
         <div class="row no-gutters">
           <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/calib.jpg');"></div>
           <div class="col-lg-6 my-auto showcase-text">
             <h2>A Microcosm in Your Home</h2>
-            <p class="lead mb-0">The Smart Garden allows you to have a small microcosm in your home. The Garden controls almost all conditions inside it: temperature, wind speed, humidity and light will all be regulated by the controller as you want it to.</p>
+            <p class="lead mb-0">The Smart Planter allows you to have a small microcosm in your home. The Planter controls almost all conditions inside it: temperature, wind speed, humidity and light will all be regulated by the controller as you want it to.</p>
           </div>
         </div>
       </div>
@@ -124,7 +124,7 @@
     <div class="container">
       <div class="row">
         <div class="col-xl-9 mx-auto">
-          <h1 class="mb-5">Using Your Smart Garden</h1>
+          <h1 class="mb-5">Using Your Smart Planter</h1>
         </div>
       </div>
     </div>
@@ -137,32 +137,32 @@
           <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/gardener.jpg');"></div>
           <div class="col-lg-6 my-auto showcase-text">
             <h2>What do I say to specify my plants?</h2>
-            <p class="lead mb-0">There is an extensive set of commands which you can use to communicate with the bot, and update the status of your Garden.
-              You can say "Add basil" or "Remove basil" to either add or remove a plant of a specific species from your Garden.
+            <p class="lead mb-0">There is an extensive set of commands which you can use to communicate with the bot, and update the status of your Planter.
+              You can say "Add basil" or "Remove basil" to either add or remove a plant of a specific species from your Planter.
               </p>
           </div>
         </div>
         <div class="row no-gutters">
           <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/basil.jpg');"></div>
           <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-            <h2>Help for the new Gardener</h2>
+            <h2>Help for the new Planterer</h2>
             <p class="lead mb-0">The bot can also give you gardening information: write "Recommend me a plant" for the bot to recommend you a plant that suits the
-            conditions of your Garden, or ask specifics about a plant such as "How do I use basil" for how to best use your plants.</p>
+            conditions of your Planter, or ask specifics about a plant such as "How do I use basil" for how to best use your plants.</p>
           </div>
         </div>
         <div class="row no-gutters">
           <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/sunlight.jpg');"></div>
           <div class="col-lg-6 my-auto showcase-text">
             <h2>Setting the Light Cycle</h2>
-            <p class="lead mb-0">The Garden will automatically control the light cycle, but you can override this if you wish to do so. You can for example tell the bot "Turn the lights off in 1 hour and a half"
+            <p class="lead mb-0">The Planter will automatically control the light cycle, but you can override this if you wish to do so. You can for example tell the bot "Turn the lights off in 1 hour and a half"
                or if you want to set a daily cycle, you can write "Turn the lights on everyday at 6:42 and off at 19:49". </p>
           </div>
         </div>
         <div class="row no-gutters">
           <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/watering.jpg');"></div>
           <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-            <h2>How will I know how my Garden is doing?</h2>
-            <p class="lead mb-0">If you want to know how the Garden is doing, you can simply ask "What's up?" to get a status on the conditions inside, and how fit they are for your plants. The facebook chat will also have the colour updated according to
+            <h2>How will I know how my Planter is doing?</h2>
+            <p class="lead mb-0">If you want to know how the Planter is doing, you can simply ask "What's up?" to get a status on the conditions inside, and how fit they are for your plants. The facebook chat will also have the colour updated according to
               how your plants are doing.
             </p>
           </div>
@@ -198,7 +198,7 @@
         <div class="row no-gutters">
           <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/board.jpg');"></div>
           <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-            <h2>How does the Smart Garden work?</h2>
+            <h2>How does the Smart Planter work?</h2>
             <p class="lead mb-0">On the back-end, the server sends data to the microcontroller every minute or when you talk to the bot. The server tells the microcontroller what the ideal conditions should be depending on your plants,
             and as long as you have the system set to automatic, it will monitor the environment itself. That means that even if your internet or our servers go down, your board will still take care of your plants.</p>
           </div>
@@ -223,14 +223,14 @@
             <div class="testimonial-item mx-auto mb-5 mb-lg-0">
               <img class="img-fluid rounded-circle mb-3" src="img/testimonials-2.jpg" alt="" style="width:150px;height:160px;">
               <h5>Dogulas</h5>
-              <p class="font-weight-light mb-0">"Thanks to Smart Garden, I no longer have to worry about my plants when I'm performing!"</p>
+              <p class="font-weight-light mb-0">"Thanks to Smart Planter, I no longer have to worry about my plants when I'm performing!"</p>
             </div>
           </div>
           <div class="col-lg-4">
             <div class="testimonial-item mx-auto mb-5 mb-lg-0">
               <img class="img-fluid rounded-circle mb-3" src="img/testimonials-3.jpg" alt="" style="width:150px;height:160px;">
               <h5>Christopher</h5>
-              <p class="font-weight-light mb-0">"Never before has my food been so flavoursome! Smart Garden grows the best herbs!"</p>
+              <p class="font-weight-light mb-0">"Never before has my food been so flavoursome! Smart Planter grows the best herbs!"</p>
             </div>
           </div>
         </div>
