--- a/Website/index.html
+++ b/Website/index.html
@@ -147,7 +147,7 @@
           <div class="col-lg-6 order-lg-1 my-auto showcase-text">
             <h2>Help for the new Planterer</h2>
             <p class="lead mb-0">The bot can also give you gardening information: write "Recommend me a plant" for the bot to recommend you a plant that suits the
-            conditions of your Planter, or ask specifics about a plant such as "How do I use basil" for how to best use your plants.</p>
+            conditions of your Planter, or ask specifics about a plant such as "How do I use basil?" for how to best use your plants.</p>
           </div>
         </div>
         <div class="row no-gutters">
@@ -191,7 +191,7 @@
             <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/chat.jpg');"></div>
             <div class="col-lg-6 my-auto showcase-text">
               <h2>Where does my data go and how?</h2>
-              <p class="lead mb-0">Whenever you interact with the facebook bot, our server runs a Python script where we then hold all of your details, incl. Facebook details and plants in your tank. Your info will not be shared with anyone else, as everyone are given unique thread IDs via Facebook.
+              <p class="lead mb-0">Whenever you interact with the facebook bot, our server runs a Python script where we then hold all of your details, incl. Planter history and plants in your tank. Your info will not be shared with anyone else, as everyone is given unique thread ID via Facebook.
                 </p>
             </div>
           </div>
